# mcp-server

./: Makefile  README_xuananh.md
.cursor/: mcp.json  temp.json  temp.sh
.cursor/rules/: parameter-rules-of-mcp-tool-function.mdc
src/fetch/: run.sh  test_fetch.py
src/git/: run.sh
src/sample/: sample_mcp_server.py
src/selenium/: .gitignore  LICENSE  README.md  control_already_open_chrome.py  control_already_open_chrome_sync_server.py  control_already_open_chrome_sync_server_read_log_use_js.py  main.py  pyproject.toml  run.sh  selenium_sync_server.py  server.py  server_already_open.py
src/selenium/src/mcp_server_selenium/: __init__.py  __main__.py  server.py  server_already_open.py
