[project]
name = "mcp-server-selenium"
version = "0.1.0"
description = "A Model Context Protocol server providing tools to control Selenium WebDriver programmatically via LLMs"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "User" }]
keywords = ["selenium", "mcp", "llm", "automation", "webdriver"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "click>=8.1.7",
    "selenium>=4.18.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "webdriver-manager>=4.0.0",
]

[project.scripts]
mcp-server-selenium = "mcp_server_selenium:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.3", "pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*" 